Fix calendar page on mobile (#512)
Issue: https://git.wechange.de/gl/code/redesign/-/issues/354
Wrap toolbar header content for large calenders

--- a/cosinnus/static/less/fullcalendar.less
+++ b/cosinnus/static/less/fullcalendar.less
@@ -246,6 +246,11 @@
     }
 }
 
+/* Make toolbar header wrap on large calendars */
+.big-calendar.large-space .fc-header-toolbar.fc-toolbar {
+  flex-wrap: wrap;
+}
+
 .app-main {
 	.fullcalendar(@app-main-color-light,@app-main-color,@app-main-color-dark);
 }
